results/liquidation_engine_v69/kani_output.txt
Kani Rust Verifier 0.67.0 (standalone)
warning: unexpected `cfg` condition name: `test`
   --> /home/nihal/Downloads/Smart-Contract-Analyzer-VeriRust/liquidation_engine_v69.rs:291:7
    |
291 | #[cfg(test)]
    |       ^^^^
    |
    = help: expected names are: `kani` and 31 more
    = help: to expect this configuration use `--check-cfg=cfg(test)`
    = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg.html> for more information about checking conditional configuration
    = note: `#[warn(unexpected_cfgs)]` on by default

error[E0308]: mismatched types
  --> /home/nihal/Downloads/Smart-Contract-Analyzer-VeriRust/liquidation_engine_v69.rs:41:24
   |
41 |     if value > guard { value.saturating_add(9) } else { guard.saturating_sub(value % 8) }
   |     -------------------^^^^^^^^^^^^^^^^^^^^^^^-------------------------------------------
   |     |                  |
   |     |                  expected `()`, found `u32`
   |     expected this to be `()`
   |
help: consider using a semicolon here
   |
41 |     if value > guard { value.saturating_add(9); } else { guard.saturating_sub(value % 8) }
   |                                               +
help: consider using a semicolon here
   |
41 |     if value > guard { value.saturating_add(9) } else { guard.saturating_sub(value % 8) };
   |                                                                                          +
help: you might have meant to return this value
   |
41 |     if value > guard { return value.saturating_add(9); } else { guard.saturating_sub(value % 8) }
   |                        ++++++                        +

error[E0308]: mismatched types
  --> /home/nihal/Downloads/Smart-Contract-Analyzer-VeriRust/liquidation_engine_v69.rs:41:57
   |
41 |     if value > guard { value.saturating_add(9) } else { guard.saturating_sub(value % 8) }
   |     ----------------------------------------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^--
   |     |                                                   |
   |     |                                                   expected `()`, found `u32`
   |     expected this to be `()`
   |
help: consider using a semicolon here
   |
41 |     if value > guard { value.saturating_add(9) } else { guard.saturating_sub(value % 8); }
   |                                                                                        +
help: consider using a semicolon here
   |
41 |     if value > guard { value.saturating_add(9) } else { guard.saturating_sub(value % 8) };
   |                                                                                          +
help: you might have meant to return this value
   |
41 |     if value > guard { value.saturating_add(9) } else { return guard.saturating_sub(value % 8); }
   |                                                         ++++++                                +

error[E0308]: mismatched types
  --> /home/nihal/Downloads/Smart-Contract-Analyzer-VeriRust/liquidation_engine_v69.rs:40:67
   |
40 | pub fn liquidation_engine_inline_probe(value: u32, guard: u32) -> u32 {
   |        -------------------------------                            ^^^ expected `u32`, found `()`
   |        |
   |        implicitly returns `()` as its body has no tail or `return` expression
   |
note: consider returning one of these bindings
  --> /home/nihal/Downloads/Smart-Contract-Analyzer-VeriRust/liquidation_engine_v69.rs:40:40
   |
40 | pub fn liquidation_engine_inline_probe(value: u32, guard: u32) -> u32 {
   |                                        ^^^^^       ^^^^^

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
error: /home/nihal/.kani/kani-0.67.0/bin/kani-compiler exited with status exit status: 101
